Bug 53929 - PIVOTTABLE: incorrect aggregation of values (worked in 3.5.5.3)
Summary: PIVOTTABLE: incorrect aggregation of values (worked in 3.5.5.3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: Other All
: highest critical
Assignee: Kohei Yoshida
URL:
Whiteboard: BSA target:3.7.0 target:3.6.2
Keywords:
: 53963 (view as bug list)
Depends on:
Blocks:
 
Reported: 2012-08-22 12:53 UTC by Gunther Lenz
Modified: 2012-09-17 17:37 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
file to demonstrate incorrect pivottable behavior (10.59 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-08-22 12:53 UTC, Gunther Lenz
Details
screenshot of data values for pivottable (28.03 KB, image/jpeg)
2012-08-22 12:54 UTC, Gunther Lenz
Details
screenshot of pivottable produced by LO 3.6 (40.47 KB, image/jpeg)
2012-08-22 12:54 UTC, Gunther Lenz
Details
screenshot of pivottable produced by LO 3.5.5.3 (36.97 KB, image/jpeg)
2012-08-22 12:55 UTC, Gunther Lenz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gunther Lenz 2012-08-22 12:53:09 UTC
Created attachment 65949 [details]
file to demonstrate incorrect pivottable behavior

Problem description: 
When creating a pivottable from data in spreadsheet, the vertical aggregation/grouping is incorrect - it contains multiple equal entries.

Steps to reproduce:
1. create a simple data table according to attached file.
2. create pivottable with vertical aggregation values from column "x-axis", horizontal aggregation values from "y-axis" and sum-values from "z-axis"
3. look at created table

Current behavior:
vertical aggregation contains multiple equal entries

Expected behavior:
unique vertical aggregation values
(open attached file in LO 3.5.5.4 and actualize pivottable)

Platform (if different from the browser): 
Win7 x64, LO 3.6

Browser: Mozilla/5.0 (Windows NT 6.1; WOW64; rv:14.0) Gecko/20100101 Firefox/14.0.1
Comment 1 Gunther Lenz 2012-08-22 12:54:09 UTC
Created attachment 65950 [details]
screenshot of data values for pivottable
Comment 2 Gunther Lenz 2012-08-22 12:54:45 UTC
Created attachment 65951 [details]
screenshot of pivottable produced by LO 3.6
Comment 3 Gunther Lenz 2012-08-22 12:55:18 UTC
Created attachment 65952 [details]
screenshot of pivottable produced by LO 3.5.5.3
Comment 4 Kohei Yoshida 2012-08-23 03:30:43 UTC
Confirming & taking it.
Comment 5 Not Assigned 2012-08-23 03:38:29 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1afd1e5ca8872253c491af76c70397fb9e00f900

fdo#53929: Pivot table uses case insensitive string comparison.
Comment 6 Kohei Yoshida 2012-08-23 03:51:12 UTC
Fixed on master.  Request for 3.6 backport has been sent out.
Comment 7 Michael Meeks 2012-08-23 08:07:01 UTC
back-ported; thrilled to see the unit test so it can never recur :-)
Comment 8 Not Assigned 2012-08-23 08:09:33 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0ee1609ddc04f01e7398fab08d74529c301600e6&g=libreoffice-3-6

fdo#53929: Pivot table uses case insensitive string comparison.


It will be available in LibreOffice 3.6.2.
Comment 9 Alex Thurgood 2012-08-23 13:42:23 UTC
*** Bug 53963 has been marked as a duplicate of this bug. ***
Comment 10 mhonline 2012-09-17 17:37:01 UTC
@Kohei

question please:
does that mean you (re)-introduced case-sensifity in a aggregation-function? 
(Hope not)

Martin