fdo#53929: Pivot table uses case insensitive string comparison.

Change-Id: I65fa22ceeba37a15b70fe41b1dee26f1dde7d759